--- a/vercel.json
+++ b/vercel.json
@@ -2,8 +2,10 @@ json
 {
   "redirects": [
     {
-      "source": "/:path*",
-      "destination": "/:path*.html",
+      "source":
+      "/:path*.html",
+      "destination":
+      "/:path*",
       "permanent": true
     }
   ]
